@@ -6,6 +6,7 @@ features
 - added command line option '-o' and command 'validatesolve' in interactive shell
   to validate the solution against an external primal and dual reference value.
 - allow to relax objective limit in reoptimization in presolved stage
+- suppress excessive printing about numerical troubles in LP on default verblevel (high)
 
 fixed bugs:
 - fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
